--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "rehype-mdx-import-media": "^1.2.0",
+    "rehype-raw": "^7.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-mdx": "^3.1.0",
     "remark-mdx-frontmatter": "^5.2.0"
